--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,7 +2,7 @@
 
 // Import a Google Font
 @import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
-@import url("https://fonts.googleapis.com/css?family=Fira+Sans");
+
 // Brand colors
 $viridiangreen: #209292;
 $etonblue: #77bfa3;
@@ -11,9 +11,12 @@ $cornsilk: #faf7dc;
 $mellowapricot: #f2b479;
 $cedarchest: #ba5b4f;
 $ivory: #fbf9e8;
+$ivory-light: #fffef3;
+$umber: #584c3f;
 
 // Update Bulma globals
 $family-sans-serif: "Nunito", sans-serif;
+$family-secondary: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 
 // derived-variables.sass
 $primary: $viridiangreen;
@@ -23,15 +26,25 @@ $warning: $mellowapricot;
 $danger: $cedarchest;
 $link: $etonblue;
 $body-background-color: $ivory;
+$background: $ivory;
+$scheme-main: $ivory-light;
 
 // elements
-$title-family: "Fira Sans", sans-serif;
+$title-family: $family-secondary;
 $title-size: 1.2em;
-// $subtitle-family:
-// $subtitle-size:
+$title-color: $umber;
+$subtitle-family: $family-secondary;
+
+// form
+$label-color: $umber;
 
 // components
 $panel-block-hover-background-color: $etonblue;
+
+// classes
+.is-small-caps {
+  font-variant: small-caps;
+}
 
 @import url("https://use.fontawesome.com/releases/v5.15.1/css/all.css");
 @import "../../node_modules/bulma/bulma.sass";
