--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
+@import url("https://fonts.googleapis.com/css2?family=Lora");
 @import url("https://use.fontawesome.com/releases/v5.15.1/css/all.css");
 .is-small-caps {
   font-variant: small-caps; }
@@ -2046,7 +2047,7 @@ a.tag:hover {
 
 .title {
   color: #584c3f;
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  font-family: "Lora", serif;
   font-size: 1.2em;
   font-weight: 600;
   line-height: 1.125; }
@@ -2074,7 +2075,7 @@ a.tag:hover {
 
 .subtitle {
   color: #4a4a4a;
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  font-family: "Lora", serif;
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 1.25; }
@@ -6895,7 +6896,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   font-family: "Nunito", sans-serif !important; }
 
 .is-family-secondary {
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif !important; }
+  font-family: "Lora", serif !important; }
 
 .is-family-sans-serif {
   font-family: "Nunito", sans-serif !important; }
